toc overflow fix 1

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -67,7 +67,8 @@
 }
 
 .toc > .toc-list {
-    overflow: hidden;
+    overflow-x: visible;
+    overflow-y: hidden;
     position: relative
 }
 
